--- a/tableau-electrique.html
+++ b/tableau-electrique.html
@@ -60,12 +60,11 @@
                 cursor: pointer;
             }
             .disjoncteur:hover {
-                /* background-color: #eaeaea; */
-                /* border: solid 1px #ddd; */
                 transform: translateY(-2px);
             }
             .disabled {
                 opacity: 10%;
+                pointer-events: none;
             }
             .popup {
                 position: absolute;
